fixed layout issues

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -889,3 +889,7 @@ iframe {
 .toggle svg{
     margin-top: 0 ! important;
 }
+
+h2, h3, h4, h5, h6{
+	font-family: itc-american-typewriter;
+}
